--- a/TaskManager/index.html
+++ b/TaskManager/index.html
@@ -4,7 +4,9 @@
     <div class="task">
         <div id="taskList"></div>
         <div class="taskAdd">
-            <input type="text" id="taskInput" placeholder="Add a task...">
+            <input type="color" name="" id="">
+            <input type="date" id="inputDate" required>
+            <input type="text" id="taskInput" placeholder="Add a task..." required>
             <button id="addTaskButton">Add Task</button>
         </div>
     </div>
